Try manual trigger

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -45,9 +45,9 @@
 name: 'Terraform'
 
 on:
+  workflow_dispatch:
   push:
     branches: [ "main" ]
-  pull_request:
 
 permissions:
   contents: read
@@ -82,7 +82,7 @@ jobs:
 
     # Checks that all Terraform configuration files adhere to a canonical format
     - name: Terraform Format
-      run: terraform fmt -check
+      run: terraform fmt -check -recursive
 
     # Generates an execution plan for Terraform
     - name: Terraform Plan
@@ -90,6 +90,18 @@ jobs:
       env:
         GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
 
+  terraform-apply:
+    name: 'Terraform apply'
+    runs-on: ubuntu-latest
+    environment: production-approval
+    needs: terraform
+
+    # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
+    defaults:
+      run:
+        shell: bash
+    
+    steps:
       # On push to "main", build or change infrastructure according to Terraform configuration files
       # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
     - name: Terraform Apply
