--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -41,8 +41,7 @@
 #       uses: hashicorp/setup-terraform@v1
 #       with:
 #         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
-
-name: 'Terraform'
+name: 'Terraform Workflow'
 
 on:
   workflow_dispatch:
@@ -83,6 +82,10 @@ jobs:
     # Checks that all Terraform configuration files adhere to a canonical format
     - name: Terraform Format
       run: terraform fmt -check -recursive
+
+    # Checks that all Terraform configuration files are valid
+    - name: Terraform Validate
+      run: terraform validate
 
     # Generates an execution plan for Terraform
     - name: Terraform Plan
